src/objects/AutomaticAPI__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>authProviderId__c</fullName>
        <label>authProviderId</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>authProviderName__c</fullName>
        <label>authProviderName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>authProviderType__c</fullName>
        <label>authProviderType</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>AutomaticAPI</label>
</CustomObject>